--- a/Front/package.json
+++ b/Front/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docs": "jsdoc -c .jsdoc.json -r"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "jsdoc": "^4.0.2",
     "jsdoc-babel": "^0.5.0"
   }
 }
